# AxiomEngine

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  ci.yml
App/: main.cpp
AxiomEngine/assets/: AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetRegistry.cpp  AssetRegistry.h  AssetTypes.h
AxiomEngine/core/: Application.cpp  Application.h  JobSystem.cpp  JobSystem.h  Time.cpp  Time.h
AxiomEngine/ecs/: ECSWorld.cpp  ECSWorld.h  ECSWorld.inl
AxiomEngine/editor/: EditorLayer.cpp  EditorLayer.h
AxiomEngine/input/: InputSystem.cpp  InputSystem.h
AxiomEngine/math/: Transform.h
AxiomEngine/physics/: Components.h  PhysicsSystem.cpp  PhysicsSystem.h
AxiomEngine/profiling/: Profiling.cpp  Profiling.h
AxiomEngine/rendering/: Camera.cpp  Camera.h  Components.h  FrameGraph.cpp  FrameGraph.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
AxiomEngine/scene/: Components.h  Prefab.cpp  Prefab.h  SceneGraph.cpp  SceneGraph.h  SceneSerializer.cpp  SceneSerializer.h
AxiomEngine/scripting/: ScriptSystem.cpp  ScriptSystem.h
Sandbox/: main.cpp
Sandbox/assets/: registry.axreg
Sandbox/input/: default.axinput
Sandbox/prefabs/: cube.axprefab
Sandbox/scenes/: default.axscene
Sandbox/scripts/: rotate.lua
Sandbox/shaders/: basic.frag  basic.vert
docs/: CODING_STYLE.rst
packaging/linux/: axiom-engine.desktop.in
tests/: ECSWorldTests.cpp
